# opencv-fail

./: flake.nix  pyproject.toml
.github/workflows/: build_nix.yml
