[tool.poetry]
name = "opencv-fail"
version = "0.1.0"
description = ""
authors = ["Jakob Klepp <jakob.klepp@moonvision.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-contrib-python = "4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
